# Sample-Projects

Android/Compass/: settings.gradle
CMake/LInkingLibWithFindPackage/: README.md
CMake/LInkingLibWithFindPackage/MyLib/: CMakeLists.txt
CMake/LInkingLibWithFindPackage/MyLib/src/: Hello.cpp  Hello.h
CppUnitTest/: CMakeLists.txt  Example.cpp  Example.h
CppUnitTest/test/: CMakeLists.txt  ExampleTest.cpp
Cucumber/: package-lock.json  package.json  readme.md
Cucumber/features/: hear_shout.feature
Cucumber/src/: shouty.js
Flutter/chat_ui/: pubspec.yaml
Flutter/expense_logger/: pubspec.yaml
Flutter/flutter_ffi/: pubspec.yaml
Flutter/state_management/: pubspec.yaml
OpenGL/: OpenGL.md
OpenGL/LearnOpenGL/: FrameBufferRendererFactory.cpp  FramebufferRendererFactory.h  LearnOpenGL.pro  MyItem.cpp  MyItem.h  MyItemRenderer.cpp  MyItemRenderer.h  main.cpp
OpenGL/OpenGLShader/: MyItem.cpp  MyItem.h  MyItemRenderer.cpp  MyItemRenderer.h
OpenGL/OpenGLTexture/: MyItem.cpp  MyItem.h  MyItemRenderer.cpp  MyItemRenderer.h  main.cpp  qml.qrc
OpenGL/OpenGLTransformation/: MyItem.cpp  MyItem.h  MyItemRenderer.cpp  MyItemRenderer.h  OpenGLTransformation.pro  main.cpp  main.qml
OpenGL/Sample-OpenGL/: MyItem.cpp  MyItem.h  Sample-OpenGL.pro
OpenGL/build-LearnOpenGL-Desktop_Qt_5_12_6_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
React/: README.md
Rust/guessing-game/: Cargo.toml
Rust/minigrep/: Cargo.toml
js-copy-class-instance/: main.js
wasm/: README.md  package.json
wasm-electron/: index.html  package.json
wasm-react/: package.json
(+139 files in other folders)
